task JDP231201-1 compilation error fixed